@@ -52,6 +52,8 @@
   PowerPC destructor function now sets up the exit() jmp_buf before
   the destructor functions are called.
 
+- Added S_IREAD, S_IWRITE and S_IEXEC aliases to <sys/stat.h>.
+
 
 c.lib 1.189 (5.3.2005)
 
